# legal-tax-ops

./: .gitignore  CLAUDE.md  LICENSE  README.md  chrome-reorg.scpt  chrome-tabs-export.tsv  linkedin_birthday_replies.md  main.py  profile.example.yaml  pyproject.toml
.claude/hooks/: delivery-gate.sh  post-tool-evidence-logger.sh  pre-compact-handoff.sh  pre-tool-risk-guard.sh  session-routing-audit.sh
.control/: repo.yaml
contracts/: agents.yaml  model-routing.yaml
docs/: roadmap.html
evals/: README.md  e000-template.sh  e001-enforcement-files-exist.sh
guides/: closing-an-entity.md  first-llc.md  foreign-income.md
legal/: ai-for-law.md  document-management.md  firm-evaluation.md  pro-se-guide.md  tools.md
processes/: 01-outside-audit.md  02-chief-operator.md  03-agent-team-contracts.md  04-hooks-over-instructions.md  05-improvement-loop.md  06-model-routing.md  README.md
scripts/: test.sh
src/: __main__.py  analyzer.py  cli.py  dashboard.py  data_sources.py  deep_view.py  dimensions.py  models.py  person_space.py  reboot.py  report.py  roadmap.py
tax/: annual-checklist.md  family-coordination.md  llc-management.md  multi-jurisdiction.md  tools.md
templates/: engagement-letter.md  entity-registry.md  tax-calendar.md
