[project]
name = "legal-tax-ops"
version = "0.1.0"
description = "Legal & tax operations toolkit — multi-jurisdiction compliance, entity management, obligation tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
taxops = "src.cli:cli"
